# rknn_demo

./: smart_camera.tgz  smart_camera1.tgz  smart_camera2.tgz  smart_camera4.tgz
rknn_demo/: CMakeLists.txt  rknn_camera.c
rknn_demo/common/: WW_H264VideoServerMediaSubsession.cpp  WW_H264VideoServerMediaSubsession.hh  WW_H264VideoSource.cpp  WW_H264VideoSource.hh  camera_record.c  camera_record.h  device_name.c  rtsp_server.cpp  rtsp_server.hh  socket.c  yuv.c  yuv.h
rknn_demo/demo/: demo.py
rknn_demo/include/liveMedia/: RTSPServer.hh
rknn_demo/rknn/ssd/ssd_1808/: ssd.c  ssd_post.c  ssd_post.h
rknn_demo/ui/ssd/: ssd_ui.c
smart_camera/: CMakeLists.txt  algorithm.c  algorithm.h  camera_record.c  conf.c  conf.h  main.c  others.c  tjstal.c  tjstal.h  v4l2camera.c
smart_camera/demo/: demo.py
smart_camera2/: CMakeLists.txt  algorithm.c  algorithm.h  camera.conf  camera_record.c  camera_record.h  conf.c  conf.h  main.c  others.c  others.h  rga.c  rga.h  tjstal.c  tjstal.h  v4l2camera.c
smart_camera2/model_files/: box_priors.txt  coco_labels_list.txt  ssd_inception_v2.rknn
